--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "node testcar.js",
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "gps": "node gps/gps.js",
+    "devgps": "concurrently \"node server.js\" \"node gps/gps.js\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   "homepage": "https://github.com/Afx31/pi-race-dash#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "node-gpsd-client": "^1.4.1",
     "socket.io": "^4.5.4",
     "socketcan": "^4.0.1"
   }
